--- a/style.css
+++ b/style.css
@@ -3,3 +3,65 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
+/* header and navigatin style */
+header{
+    background-color: #FFF8F3;
+    background-image: url(img/header_bg.png), url(img/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+
+nav img{
+    width: 100px;
+    height: 60px;
+}
+header nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 200px;
+}
+nav ul{
+    display: flex;
+    align-items: center;
+}
+nav li{
+    list-style: none;
+    margin-left: 50px;
+}
+.btn-primary{
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    height: 64px;
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: none;
+    padding: 18px 35px;
+
+}
+/* banner style */
+.banner{
+    margin: 0 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner img{
+    margin-right: -60px;
+    padding-left: 250px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+.banner-sub-title{
+    font-weight: 600;
+    font-size: 45px;
+    margin-bottom: 20px;
+}
+.banner-desc{
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
